feat: ref script

--- a/programs.cfg
+++ b/programs.cfg
@@ -2,6 +2,7 @@
   ["sometestpkg"] = {
     files = {
         ["master/sometest.lua"] = "/bin",
+        ["master/crop_stats_dev.lua"] = "/bin",
     },
     name = "Test GitHub loading",
     description = "try to load files from web",
